Fixed message transport and sticky headers * added sticky headers to User, but not Sessions split. * added getUserLockoutList() to lock and reinstate for html ng-template. * Formatted user lockout list the best possible w/out really exploring too much. * added disabled button tooltip so admin knows to unlock user before removing. * Auto removal from locked list will be dealt with on another task. * PreserveWhitespace: true didn't work as hoped, this is why the list is only comma separated and not actually a list.; Added a TODO for this shortcoming.

--- a/kohese-portal/client/src/components/admin/admin.component.scss
+++ b/kohese-portal/client/src/components/admin/admin.component.scss
@@ -25,17 +25,25 @@
   }
 
   .user-container {
-    height: calc(100% - 84px);
+    // height calculated to work while lens is active
+    height: calc(100% - 2.5em);
     overflow: none;
 
     .user-banner {
       height: 2em;
       padding-left: 1.5%;
+      overflow: inherit;
       background-color: white;
       color: black;
       display: flex;
       flex-direction: row;
       align-items: center
+    }
+
+    // height calculated to make <h2> Users header sticky.
+    .user-panel {
+      height: calc(100% - 2em);
+      overflow: auto;
     }
   }
 }
@@ -45,7 +53,6 @@
 }
 
 mat-expansion-panel {
-  height: 100%;
   width: 100%;
   box-shadow: 0 3px 1px -2px rgba(250,250,250,.8),
               0 2px 2px  0 rgba(250,250,250,.64),
